added second line of story

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
-        <p>It was a dark and stormy night...</p>
+        <p>It was a dark and stormy night...</p><br>
+        <p>There was a sudden scream piercing through the night</p>
     </body>
 </html>
