Added fourth line

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <p>It was a dark and stormy night...</p><br>
+        <p>It was a dark and stormy night...</p>
         <p>There was a sudden scream piercing through the night</p>
         <p>Walter shot up from his bed and quickly crept to his door to see what had happened.</p>
+        <p>Upon opening the door, Walter was extremely startled to see a strange sight before him</p>
     </body>
 </html>
